full_project340/phase3/oliki_phase3/parser.output
Terminals unused in grammar

   SINGLE_LINE_COMMENT
   OTHERCHAR
   UMINUS


State 16 conflicts: 1 shift/reduce
State 100 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmt_list

    2 stmt: expr SEMICOLON
    3     | ifstmt
    4     | whilestmt
    5     | forstmt
    6     | returnstmt

    7 $@1: %empty

    8 stmt: BREAK $@1 SEMICOLON

    9 $@2: %empty

   10 stmt: CONTINUE $@2 SEMICOLON
   11     | block
   12     | funcdef
   13     | SEMICOLON

   14 stmt_list: stmt stmt_list
   15          | %empty

   16 expr: assignexpr
   17     | expr ADD expr
   18     | expr MINUS expr
   19     | expr MULTIPLICATION expr
   20     | expr DIVISION expr
   21     | expr MODULO expr
   22     | expr GREATER expr
   23     | expr GREATER_EQUAL expr
   24     | expr LESS expr
   25     | expr LESS_EQUAL expr
   26     | expr EQUAL expr
   27     | expr INEQUAL expr
   28     | expr AND expr
   29     | expr OR expr
   30     | term

   31 term: LEFT_PARENTHESIS expr RIGHT_PARENTHESIS
   32     | MINUS expr
   33     | NOT expr
   34     | INCREMENT lvalue
   35     | lvalue INCREMENT
   36     | DECREMENT lvalue
   37     | lvalue DECREMENT
   38     | primary

   39 $@3: %empty

   40 $@4: %empty

   41 assignexpr: lvalue $@3 ASSIGN $@4 expr

   42 primary: lvalue
   43        | call
   44        | objectdef
   45        | LEFT_PARENTHESIS funcdef RIGHT_PARENTHESIS
   46        | const

   47 lvalue: IDENT
   48       | LOCAL IDENT
   49       | DOUBLE_COLON IDENT
   50       | member

   51 member: lvalue DOT IDENT
   52       | lvalue LEFT_SQUARE_BRACKET expr RIGHT_SQUARE_BRACKET
   53       | call DOT IDENT
   54       | call LEFT_SQUARE_BRACKET expr RIGHT_SQUARE_BRACKET

   55 call: call LEFT_PARENTHESIS elist RIGHT_PARENTHESIS
   56     | lvalue callsuffix
   57     | LEFT_PARENTHESIS funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

   58 callsuffix: normcall
   59           | methodcall

   60 $@5: %empty

   61 normcall: LEFT_PARENTHESIS $@5 elist RIGHT_PARENTHESIS

   62 $@6: %empty

   63 methodcall: DOUBLE_DOT IDENT LEFT_PARENTHESIS $@6 elist RIGHT_PARENTHESIS

   64 elist: expr elist_expressions
   65      | %empty

   66 elist_expressions: COMMA expr elist_expressions
   67                  | %empty

   68 objectdef: LEFT_SQUARE_BRACKET elist RIGHT_SQUARE_BRACKET
   69          | LEFT_SQUARE_BRACKET indexed RIGHT_SQUARE_BRACKET

   70 indexed: indexedelem indexedelem_list

   71 indexedelem_list: COMMA indexedelem indexedelem_list
   72                 | %empty

   73 $@7: %empty

   74 indexedelem: LEFT_CURLY_BRACKET expr COLON $@7 expr RIGHT_CURLY_BRACKET

   75 $@8: %empty

   76 block: LEFT_CURLY_BRACKET $@8 stmt_list RIGHT_CURLY_BRACKET
   77      | LEFT_CURLY_BRACKET RIGHT_CURLY_BRACKET

   78 $@9: %empty

   79 @10: %empty

   80 $@11: %empty

   81 $@12: %empty

   82 funcdef: FUNCTION $@9 IDENT @10 LEFT_PARENTHESIS $@11 idlist RIGHT_PARENTHESIS $@12 block

   83 @13: %empty

   84 $@14: %empty

   85 $@15: %empty

   86 funcdef: FUNCTION @13 LEFT_PARENTHESIS $@14 idlist RIGHT_PARENTHESIS $@15 block

   87 const: INTEGER
   88      | REAL
   89      | STRINGCONST
   90      | NIL
   91      | TRUE
   92      | FALSE

   93 $@16: %empty

   94 idlist: IDENT $@16 idlist_list
   95       | %empty

   96 $@17: %empty

   97 idlist_list: COMMA IDENT $@17 idlist_list
   98            | %empty

   99 ifprefix: IF LEFT_PARENTHESIS expr RIGHT_PARENTHESIS

  100 elseprefix: ELSE

  101 ifstmt: ifprefix stmt
  102       | ifprefix stmt elseprefix stmt

  103 whilestart: WHILE

  104 $@18: %empty

  105 whilecond: LEFT_PARENTHESIS $@18 expr RIGHT_PARENTHESIS

  106 whilestmt: whilestart whilecond stmt

  107 N: %empty

  108 M: %empty

  109 forprefix: FOR LEFT_PARENTHESIS elist SEMICOLON M expr SEMICOLON

  110 $@19: %empty

  111 forstmt: forprefix N elist RIGHT_PARENTHESIS $@19 N stmt N

  112 $@20: %empty

  113 returnstmt: RETURN $@20 expr SEMICOLON

  114 $@21: %empty

  115 returnstmt: RETURN $@21 SEMICOLON


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 99
ELSE (259) 100
WHILE (260) 103
FOR (261) 109
FUNCTION (262) 82 86
RETURN (263) 113 115
BREAK (264) 8
CONTINUE (265) 10
AND (266) 28
NOT (267) 33
OR (268) 29
LOCAL (269) 48
TRUE (270) 91
FALSE (271) 92
NIL (272) 90
ASSIGN (273) 41
ADD (274) 17
MINUS (275) 18 32
MULTIPLICATION (276) 19
DIVISION (277) 20
MODULO (278) 21
EQUAL (279) 26
INEQUAL (280) 27
INCREMENT (281) 34 35
DECREMENT (282) 36 37
GREATER (283) 22
GREATER_EQUAL (284) 23
LESS (285) 24
LESS_EQUAL (286) 25
LEFT_CURLY_BRACKET (287) 74 76 77
RIGHT_CURLY_BRACKET (288) 74 76 77
LEFT_SQUARE_BRACKET (289) 52 54 68 69
RIGHT_SQUARE_BRACKET (290) 52 54 68 69
LEFT_PARENTHESIS (291) 31 45 55 57 61 63 82 86 99 105 109
RIGHT_PARENTHESIS (292) 31 45 55 57 61 63 82 86 99 105 111
SEMICOLON (293) 2 8 10 13 109 113 115
COMMA (294) 66 71 97
COLON (295) 74
DOUBLE_COLON (296) 49
DOT (297) 51 53
DOUBLE_DOT (298) 63
SINGLE_LINE_COMMENT (299)
OTHERCHAR (300)
IDENT (301) 47 48 49 51 53 63 82 94 97
INTEGER (302) 87
REAL (303) 88
STRINGCONST (304) 89
UMINUS (305)


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
program (52)
    on left: 1, on right: 0
stmt (53)
    on left: 2 3 4 5 6 8 10 11 12 13, on right: 14 101 102 106 111
$@1 (54)
    on left: 7, on right: 8
$@2 (55)
    on left: 9, on right: 10
stmt_list (56)
    on left: 14 15, on right: 1 14 76
expr (57)
    on left: 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30, on right:
    2 17 18 19 20 21 22 23 24 25 26 27 28 29 31 32 33 41 52 54 64 66
    74 99 105 109 113
term (58)
    on left: 31 32 33 34 35 36 37 38, on right: 30
assignexpr (59)
    on left: 41, on right: 16
$@3 (60)
    on left: 39, on right: 41
$@4 (61)
    on left: 40, on right: 41
primary (62)
    on left: 42 43 44 45 46, on right: 38
lvalue (63)
    on left: 47 48 49 50, on right: 34 35 36 37 41 42 51 52 56
member (64)
    on left: 51 52 53 54, on right: 50
call (65)
    on left: 55 56 57, on right: 43 53 54 55
callsuffix (66)
    on left: 58 59, on right: 56
normcall (67)
    on left: 61, on right: 58
$@5 (68)
    on left: 60, on right: 61
methodcall (69)
    on left: 63, on right: 59
$@6 (70)
    on left: 62, on right: 63
elist (71)
    on left: 64 65, on right: 55 57 61 63 68 109 111
elist_expressions (72)
    on left: 66 67, on right: 64 66
objectdef (73)
    on left: 68 69, on right: 44
indexed (74)
    on left: 70, on right: 69
indexedelem_list (75)
    on left: 71 72, on right: 70 71
indexedelem (76)
    on left: 74, on right: 70 71
$@7 (77)
    on left: 73, on right: 74
block (78)
    on left: 76 77, on right: 11 82 86
$@8 (79)
    on left: 75, on right: 76
funcdef (80)
    on left: 82 86, on right: 12 45 57
$@9 (81)
    on left: 78, on right: 82
@10 (82)
    on left: 79, on right: 82
$@11 (83)
    on left: 80, on right: 82
$@12 (84)
    on left: 81, on right: 82
@13 (85)
    on left: 83, on right: 86
$@14 (86)
    on left: 84, on right: 86
$@15 (87)
    on left: 85, on right: 86
const (88)
    on left: 87 88 89 90 91 92, on right: 46
idlist (89)
    on left: 94 95, on right: 82 86
$@16 (90)
    on left: 93, on right: 94
idlist_list (91)
    on left: 97 98, on right: 94 97
$@17 (92)
    on left: 96, on right: 97
ifprefix (93)
    on left: 99, on right: 101 102
elseprefix (94)
    on left: 100, on right: 102
ifstmt (95)
    on left: 101 102, on right: 3
whilestart (96)
    on left: 103, on right: 106
whilecond (97)
    on left: 105, on right: 106
$@18 (98)
    on left: 104, on right: 105
whilestmt (99)
    on left: 106, on right: 4
N (100)
    on left: 107, on right: 111
M (101)
    on left: 108, on right: 109
forprefix (102)
    on left: 109, on right: 111
forstmt (103)
    on left: 111, on right: 5
$@19 (104)
    on left: 110, on right: 111
returnstmt (105)
    on left: 113 115, on right: 6
$@20 (106)
    on left: 112, on right: 113
$@21 (107)
    on left: 114, on right: 115


State 0

    0 $accept: . program $end

    IF                   shift, and go to state 1
    WHILE                shift, and go to state 2
    FOR                  shift, and go to state 3
    FUNCTION             shift, and go to state 4
    RETURN               shift, and go to state 5
    BREAK                shift, and go to state 6
    CONTINUE             shift, and go to state 7
    NOT                  shift, and go to state 8
    LOCAL                shift, and go to state 9
    TRUE                 shift, and go to state 10
    FALSE                shift, and go to state 11
    NIL                  shift, and go to state 12
    MINUS                shift, and go to state 13
    INCREMENT            shift, and go to state 14
    DECREMENT            shift, and go to state 15
    LEFT_CURLY_BRACKET   shift, and go to state 16
    LEFT_SQUARE_BRACKET  shift, and go to state 17
    LEFT_PARENTHESIS     shift, and go to state 18
    SEMICOLON            shift, and go to state 19
    DOUBLE_COLON         shift, and go to state 20
    IDENT                shift, and go to state 21
    INTEGER              shift, and go to state 22
    REAL                 shift, and go to state 23
    STRINGCONST          shift, and go to state 24

    $default  reduce using rule 15 (stmt_list)

    program     go to state 25
    stmt        go to state 26
    stmt_list   go to state 27
    expr        go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcdef     go to state 37
    const       go to state 38
    ifprefix    go to state 39
    ifstmt      go to state 40
    whilestart  go to state 41
    whilestmt   go to state 42
    forprefix   go to state 43
    forstmt     go to state 44
    returnstmt  go to state 45


State 1

   99 ifprefix: IF . LEFT_PARENTHESIS expr RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  shift, and go to state 46


State 2

  103 whilestart: WHILE .

    $default  reduce using rule 103 (whilestart)


State 3

  109 forprefix: FOR . LEFT_PARENTHESIS elist SEMICOLON M expr SEMICOLON

    LEFT_PARENTHESIS  shift, and go to state 47


State 4

   82 funcdef: FUNCTION . $@9 IDENT @10 LEFT_PARENTHESIS $@11 idlist RIGHT_PARENTHESIS $@12 block
   86        | FUNCTION . @13 LEFT_PARENTHESIS $@14 idlist RIGHT_PARENTHESIS $@15 block

    LEFT_PARENTHESIS  reduce using rule 83 (@13)
    $default          reduce using rule 78 ($@9)

    $@9  go to state 48
    @13  go to state 49


State 5

  113 returnstmt: RETURN . $@20 expr SEMICOLON
  115           | RETURN . $@21 SEMICOLON

    SEMICOLON  reduce using rule 114 ($@21)
    $default   reduce using rule 112 ($@20)

    $@20  go to state 50
    $@21  go to state 51


State 6

    8 stmt: BREAK . $@1 SEMICOLON

    $default  reduce using rule 7 ($@1)

    $@1  go to state 52


State 7

   10 stmt: CONTINUE . $@2 SEMICOLON

    $default  reduce using rule 9 ($@2)

    $@2  go to state 53


State 8

   33 term: NOT . expr

    NOT                  shift, and go to state 8
    LOCAL                shift, and go to state 9
    TRUE                 shift, and go to state 10
    FALSE                shift, and go to state 11
    NIL                  shift, and go to state 12
    MINUS                shift, and go to state 13
    INCREMENT            shift, and go to state 14
    DECREMENT            shift, and go to state 15
    LEFT_SQUARE_BRACKET  shift, and go to state 17
    LEFT_PARENTHESIS     shift, and go to state 18
    DOUBLE_COLON         shift, and go to state 20
    IDENT                shift, and go to state 21
    INTEGER              shift, and go to state 22
    REAL                 shift, and go to state 23
    STRINGCONST          shift, and go to state 24

    expr        go to state 54
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 9

   48 lvalue: LOCAL . IDENT

    IDENT  shift, and go to state 55


State 10

   91 const: TRUE .

    $default  reduce using rule 91 (const)


State 11

   92 const: FALSE .

    $default  reduce using rule 92 (const)


State 12

   90 const: NIL .

    $default  reduce using rule 90 (const)


State 13

   32 term: MINUS . expr

    NOT                  shift, and go to state 8
    LOCAL                shift, and go to state 9
    TRUE                 shift, and go to state 10
    FALSE                shift, and go to state 11
    NIL                  shift, and go to state 12
    MINUS                shift, and go to state 13
    INCREMENT            shift, and go to state 14
    DECREMENT            shift, and go to state 15
    LEFT_SQUARE_BRACKET  shift, and go to state 17
    LEFT_PARENTHESIS     shift, and go to state 18
    DOUBLE_COLON         shift, and go to state 20
    IDENT                shift, and go to state 21
    INTEGER              shift, and go to state 22
    REAL                 shift, and go to state 23
    STRINGCONST          shift, and go to state 24

    expr        go to state 56
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 14

   34 term: INCREMENT . lvalue

    LOCAL             shift, and go to state 9
    LEFT_PARENTHESIS  shift, and go to state 57
    DOUBLE_COLON      shift, and go to state 20
    IDENT             shift, and go to state 21

    lvalue  go to state 58
    member  go to state 33
    call    go to state 59


State 15

   36 term: DECREMENT . lvalue

    LOCAL             shift, and go to state 9
    LEFT_PARENTHESIS  shift, and go to state 57
    DOUBLE_COLON      shift, and go to state 20
    IDENT             shift, and go to state 21

    lvalue  go to state 60
    member  go to state 33
    call    go to state 59


State 16

   76 block: LEFT_CURLY_BRACKET . $@8 stmt_list RIGHT_CURLY_BRACKET
   77      | LEFT_CURLY_BRACKET . RIGHT_CURLY_BRACKET

    RIGHT_CURLY_BRACKET  shift, and go to state 61

    RIGHT_CURLY_BRACKET  [reduce using rule 75 ($@8)]
    $default             reduce using rule 75 ($@8)

    $@8  go to state 62


State 17

   68 objectdef: LEFT_SQUARE_BRACKET . elist RIGHT_SQUARE_BRACKET
   69          | LEFT_SQUARE_BRACKET . indexed RIGHT_SQUARE_BRACKET

    NOT                  shift, and go to state 8
    LOCAL                shift, and go to state 9
    TRUE                 shift, and go to state 10
    FALSE                shift, and go to state 11
    NIL                  shift, and go to state 12
    MINUS                shift, and go to state 13
    INCREMENT            shift, and go to state 14
    DECREMENT            shift, and go to state 15
    LEFT_CURLY_BRACKET   shift, and go to state 63
    LEFT_SQUARE_BRACKET  shift, and go to state 17
    LEFT_PARENTHESIS     shift, and go to state 18
    DOUBLE_COLON         shift, and go to state 20
    IDENT                shift, and go to state 21
    INTEGER              shift, and go to state 22
    REAL                 shift, and go to state 23
    STRINGCONST          shift, and go to state 24

    $default  reduce using rule 65 (elist)

    expr         go to state 64
    term         go to state 29
    assignexpr   go to state 30
    primary      go to state 31
    lvalue       go to state 32
    member       go to state 33
    call         go to state 34
    elist        go to state 65
    objectdef    go to state 35
    indexed      go to state 66
    indexedelem  go to state 67
    const        go to state 38


State 18

   31 term: LEFT_PARENTHESIS . expr RIGHT_PARENTHESIS
   45 primary: LEFT_PARENTHESIS . funcdef RIGHT_PARENTHESIS
   57 call: LEFT_PARENTHESIS . funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    FUNCTION             shift, and go to state 4
    NOT                  shift, and go to state 8
    LOCAL                shift, and go to state 9
    TRUE                 shift, and go to state 10
    FALSE                shift, and go to state 11
    NIL                  shift, and go to state 12
    MINUS                shift, and go to state 13
    INCREMENT            shift, and go to state 14
    DECREMENT            shift, and go to state 15
    LEFT_SQUARE_BRACKET  shift, and go to state 17
    LEFT_PARENTHESIS     shift, and go to state 18
    DOUBLE_COLON         shift, and go to state 20
    IDENT                shift, and go to state 21
    INTEGER              shift, and go to state 22
    REAL                 shift, and go to state 23
    STRINGCONST          shift, and go to state 24

    expr        go to state 68
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    funcdef     go to state 69
    const       go to state 38


State 19

   13 stmt: SEMICOLON .

    $default  reduce using rule 13 (stmt)


State 20

   49 lvalue: DOUBLE_COLON . IDENT

    IDENT  shift, and go to state 70


State 21

   47 lvalue: IDENT .

    $default  reduce using rule 47 (lvalue)


State 22

   87 const: INTEGER .

    $default  reduce using rule 87 (const)


State 23

   88 const: REAL .

    $default  reduce using rule 88 (const)


State 24

   89 const: STRINGCONST .

    $default  reduce using rule 89 (const)


State 25

    0 $accept: program . $end

    $end  shift, and go to state 71


State 26

   14 stmt_list: stmt . stmt_list

    IF                   shift, and go to state 1
    WHILE                shift, and go to state 2
    FOR                  shift, and go to state 3
    FUNCTION             shift, and go to state 4
    RETURN               shift, and go to state 5
    BREAK                shift, and go to state 6
    CONTINUE             shift, and go to state 7
    NOT                  shift, and go to state 8
    LOCAL                shift, and go to state 9
    TRUE                 shift, and go to state 10
    FALSE                shift, and go to state 11
    NIL                  shift, and go to state 12
    MINUS                shift, and go to state 13
    INCREMENT            shift, and go to state 14
    DECREMENT            shift, and go to state 15
    LEFT_CURLY_BRACKET   shift, and go to state 16
    LEFT_SQUARE_BRACKET  shift, and go to state 17
    LEFT_PARENTHESIS     shift, and go to state 18
    SEMICOLON            shift, and go to state 19
    DOUBLE_COLON         shift, and go to state 20
    IDENT                shift, and go to state 21
    INTEGER              shift, and go to state 22
    REAL                 shift, and go to state 23
    STRINGCONST          shift, and go to state 24

    $default  reduce using rule 15 (stmt_list)

    stmt        go to state 26
    stmt_list   go to state 72
    expr        go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcdef     go to state 37
    const       go to state 38
    ifprefix    go to state 39
    ifstmt      go to state 40
    whilestart  go to state 41
    whilestmt   go to state 42
    forprefix   go to state 43
    forstmt     go to state 44
    returnstmt  go to state 45


State 27

    1 program: stmt_list .

    $default  reduce using rule 1 (program)


State 28

    2 stmt: expr . SEMICOLON
   17 expr: expr . ADD expr
   18     | expr . MINUS expr
   19     | expr . MULTIPLICATION expr
   20     | expr . DIVISION expr
   21     | expr . MODULO expr
   22     | expr . GREATER expr
   23     | expr . GREATER_EQUAL expr
   24     | expr . LESS expr
   25     | expr . LESS_EQUAL expr
   26     | expr . EQUAL expr
   27     | expr . INEQUAL expr
   28     | expr . AND expr
   29     | expr . OR expr

    AND             shift, and go to state 73
    OR              shift, and go to state 74
    ADD             shift, and go to state 75
    MINUS           shift, and go to state 76
    MULTIPLICATION  shift, and go to state 77
    DIVISION        shift, and go to state 78
    MODULO          shift, and go to state 79
    EQUAL           shift, and go to state 80
    INEQUAL         shift, and go to state 81
    GREATER         shift, and go to state 82
    GREATER_EQUAL   shift, and go to state 83
    LESS            shift, and go to state 84
    LESS_EQUAL      shift, and go to state 85
    SEMICOLON       shift, and go to state 86


State 29

   30 expr: term .

    $default  reduce using rule 30 (expr)


State 30

   16 expr: assignexpr .

    $default  reduce using rule 16 (expr)


State 31

   38 term: primary .

    $default  reduce using rule 38 (term)


State 32

   35 term: lvalue . INCREMENT
   37     | lvalue . DECREMENT
   41 assignexpr: lvalue . $@3 ASSIGN $@4 expr
   42 primary: lvalue .
   51 member: lvalue . DOT IDENT
   52       | lvalue . LEFT_SQUARE_BRACKET expr RIGHT_SQUARE_BRACKET
   56 call: lvalue . callsuffix

    INCREMENT            shift, and go to state 87
    DECREMENT            shift, and go to state 88
    LEFT_SQUARE_BRACKET  shift, and go to state 89
    LEFT_PARENTHESIS     shift, and go to state 90
    DOT                  shift, and go to state 91
    DOUBLE_DOT           shift, and go to state 92

    ASSIGN    reduce using rule 39 ($@3)
    $default  reduce using rule 42 (primary)

    $@3         go to state 93
    callsuffix  go to state 94
    normcall    go to state 95
    methodcall  go to state 96


State 33

   50 lvalue: member .

    $default  reduce using rule 50 (lvalue)


State 34

   43 primary: call .
   53 member: call . DOT IDENT
   54       | call . LEFT_SQUARE_BRACKET expr RIGHT_SQUARE_BRACKET
   55 call: call . LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    LEFT_SQUARE_BRACKET  shift, and go to state 97
    LEFT_PARENTHESIS     shift, and go to state 98
    DOT                  shift, and go to state 99

    $default  reduce using rule 43 (primary)


State 35

   44 primary: objectdef .

    $default  reduce using rule 44 (primary)


State 36

   11 stmt: block .

    $default  reduce using rule 11 (stmt)


State 37

   12 stmt: funcdef .

    $default  reduce using rule 12 (stmt)


State 38

   46 primary: const .

    $default  reduce using rule 46 (primary)


State 39

  101 ifstmt: ifprefix . stmt
  102       | ifprefix . stmt elseprefix stmt

    IF                   shift, and go to state 1
    WHILE                shift, and go to state 2
    FOR                  shift, and go to state 3
    FUNCTION             shift, and go to state 4
    RETURN               shift, and go to state 5
    BREAK                shift, and go to state 6
    CONTINUE             shift, and go to state 7
    NOT                  shift, and go to state 8
    LOCAL                shift, and go to state 9
    TRUE                 shift, and go to state 10
    FALSE                shift, and go to state 11
    NIL                  shift, and go to state 12
    MINUS                shift, and go to state 13
    INCREMENT            shift, and go to state 14
    DECREMENT            shift, and go to state 15
    LEFT_CURLY_BRACKET   shift, and go to state 16
    LEFT_SQUARE_BRACKET  shift, and go to state 17
    LEFT_PARENTHESIS     shift, and go to state 18
    SEMICOLON            shift, and go to state 19
    DOUBLE_COLON         shift, and go to state 20
    IDENT                shift, and go to state 21
    INTEGER              shift, and go to state 22
    REAL                 shift, and go to state 23
    STRINGCONST          shift, and go to state 24

    stmt        go to state 100
    expr        go to state 28
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    block       go to state 36
    funcdef     go to state 37
    const       go to state 38
    ifprefix    go to state 39
    ifstmt      go to state 40
    whilestart  go to state 41
    whilestmt   go to state 42
    forprefix   go to state 43
    forstmt     go to state 44
    returnstmt  go to state 45


State 40

    3 stmt: ifstmt .

    $default  reduce using rule 3 (stmt)


State 41

  106 whilestmt: whilestart . whilecond stmt

    LEFT_PARENTHESIS  shift, and go to state 101

    whilecond  go to state 102


State 42

    4 stmt: whilestmt .

    $default  reduce using rule 4 (stmt)


State 43

  111 forstmt: forprefix . N elist RIGHT_PARENTHESIS $@19 N stmt N

    $default  reduce using rule 107 (N)

    N  go to state 103


State 44

    5 stmt: forstmt .

    $default  reduce using rule 5 (stmt)


State 45

    6 stmt: returnstmt .

    $default  reduce using rule 6 (stmt)


State 46

   99 ifprefix: IF LEFT_PARENTHESIS . expr RIGHT_PARENTHESIS

    NOT                  shift, and go to state 8
    LOCAL                shift, and go to state 9
    TRUE                 shift, and go to state 10
    FALSE                shift, and go to state 11
    NIL                  shift, and go to state 12
    MINUS                shift, and go to state 13
    INCREMENT            shift, and go to state 14
    DECREMENT            shift, and go to state 15
    LEFT_SQUARE_BRACKET  shift, and go to state 17
    LEFT_PARENTHESIS     shift, and go to state 18
    DOUBLE_COLON         shift, and go to state 20
    IDENT                shift, and go to state 21
    INTEGER              shift, and go to state 22
    REAL                 shift, and go to state 23
    STRINGCONST          shift, and go to state 24

    expr        go to state 104
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 47

  109 forprefix: FOR LEFT_PARENTHESIS . elist SEMICOLON M expr SEMICOLON

    NOT                  shift, and go to state 8
    LOCAL                shift, and go to state 9
    TRUE                 shift, and go to state 10
    FALSE                shift, and go to state 11
    NIL                  shift, and go to state 12
    MINUS                shift, and go to state 13
    INCREMENT            shift, and go to state 14
    DECREMENT            shift, and go to state 15
    LEFT_SQUARE_BRACKET  shift, and go to state 17
    LEFT_PARENTHESIS     shift, and go to state 18
    DOUBLE_COLON         shift, and go to state 20
    IDENT                shift, and go to state 21
    INTEGER              shift, and go to state 22
    REAL                 shift, and go to state 23
    STRINGCONST          shift, and go to state 24

    $default  reduce using rule 65 (elist)

    expr        go to state 64
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    elist       go to state 105
    objectdef   go to state 35
    const       go to state 38


State 48

   82 funcdef: FUNCTION $@9 . IDENT @10 LEFT_PARENTHESIS $@11 idlist RIGHT_PARENTHESIS $@12 block

    IDENT  shift, and go to state 106


State 49

   86 funcdef: FUNCTION @13 . LEFT_PARENTHESIS $@14 idlist RIGHT_PARENTHESIS $@15 block

    LEFT_PARENTHESIS  shift, and go to state 107


State 50

  113 returnstmt: RETURN $@20 . expr SEMICOLON

    NOT                  shift, and go to state 8
    LOCAL                shift, and go to state 9
    TRUE                 shift, and go to state 10
    FALSE                shift, and go to state 11
    NIL                  shift, and go to state 12
    MINUS                shift, and go to state 13
    INCREMENT            shift, and go to state 14
    DECREMENT            shift, and go to state 15
    LEFT_SQUARE_BRACKET  shift, and go to state 17
    LEFT_PARENTHESIS     shift, and go to state 18
    DOUBLE_COLON         shift, and go to state 20
    IDENT                shift, and go to state 21
    INTEGER              shift, and go to state 22
    REAL                 shift, and go to state 23
    STRINGCONST          shift, and go to state 24

    expr        go to state 108
    term        go to state 29
    assignexpr  go to state 30
    primary     go to state 31
    lvalue      go to state 32
    member      go to state 33
    call        go to state 34
    objectdef   go to state 35
    const       go to state 38


State 51

  115 returnstmt: RETURN $@21 . SEMICOLON

    SEMICOLON  shift, and go to state 109


State 52

    8 stmt: BREAK $@1 . SEMICOLON

    SEMICOLON  shift, and go to state 110


State 53

   10 stmt: CONTINUE $@2 . SEMICOLON

    SEMICOLON  shift, and go to state 111


State 54

   17 expr: expr . ADD expr
   18     | expr . MINUS expr
   19     | expr . MULTIPLICATION expr
   20     | expr . DIVISION expr
   21     | expr . MODULO expr
   22     | expr . GREATER expr
   23     | expr . GREATER_EQUAL expr
   24     | expr . LESS expr
   25     | expr . LESS_EQUAL expr
   26     | expr . EQUAL expr
   27     | expr . INEQUAL expr
   28     | expr . AND expr
   29     | expr . OR expr
   33 term: NOT expr .

    $default  reduce using rule 33 (term)


State 55

   48 lvalue: LOCAL IDENT .

    $default  reduce using rule 48 (lvalue)


State 56

   17 expr: expr . ADD expr
   18     | expr . MINUS expr
   19     | expr . MULTIPLICATION expr
   20     | expr . DIVISION expr
   21     | expr . MODULO expr
   22     | expr . GREATER expr
   23     | expr . GREATER_EQUAL expr
   24     | expr . LESS expr
   25     | expr . LESS_EQUAL expr
   26     | expr . EQUAL expr
   27     | expr . INEQUAL expr
   28     | expr . AND expr
   29     | expr . OR expr
   32 term: MINUS expr .

    MULTIPLICATION  shift, and go to state 77
    DIVISION        shift, and go to state 78
    MODULO          shift, and go to state 79

    $default  reduce using rule 32 (term)


State 57

   57 call: LEFT_PARENTHESIS . funcdef RIGHT_PARENTHESIS LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    FUNCTION  shift, and go to state 4

    funcdef  go to state 112


State 58

   34 term: INCREMENT lvalue .
   51 member: lvalue . DOT IDENT
   52       | lvalue . LEFT_SQUARE_BRACKET expr RIGHT_SQUARE_BRACKET
   56 call: lvalue . callsuffix

    LEFT_SQUARE_BRACKET  shift, and go to state 89
    LEFT_PARENTHESIS     shift, and go to state 90
    DOT                  shift, and go to state 91
    DOUBLE_DOT           shift, and go to state 92

    $default  reduce using rule 34 (term)

    callsuffix  go to state 94
    normcall    go to state 95
    methodcall  go to state 96


State 59

   53 member: call . DOT IDENT
   54       | call . LEFT_SQUARE_BRACKET expr RIGHT_SQUARE_BRACKET
   55 call: call . LEFT_PARENTHESIS elist RIGHT_PARENTHESIS

    LEFT_SQUARE_BRACKET  shift, and go to state 97
    LEFT_PARENTHESIS     shift, and go to state 98
    DOT                  shift, and go to state 99


State 60

   36 term: DECREMENT lvalue .
   51 member: lvalue . DOT IDENT
   52       | lvalue . LEFT_SQUARE_BRACKET expr RIGHT_SQUARE_BRACKET
   56 call: lvalue . callsuffix

    LEFT_SQUARE_BRACKET  shift, and go to state 89
    LEFT_PARENTHESIS     shift, and go to state 90
    DOT                  shift, and go to state 91
    DOUBLE_DOT           shift, and go to state 92

    $default  reduce using rule 36 (term)

    callsuffix  go to state 94
    normcall    go to state 95
    methodcall  go to state 96


State 61

   77 block: LEFT_CURLY_BRACKET RIGHT_CURLY_BRACKET .

    $default  reduce using rule 77 (block)


State 62

   76 block: LEFT_CURLY_BRACKET $@8 . stmt_list RIGHT_CURLY_BRACKET
